Added std:merge doc; Added timer-debug config; fixed javadoc script alert; fixed double-wrapped event type bug; speed up event property get; faster sub-view update; added solution pattern; minor site update
git-svn-id: http://svn.codehaus.org/esper/esper/trunk@1529 d91eb1b3-1215-0410-9718-d41490442091